# word2vec

./: CMakeLists.txt  gen.sh  readme.txt  train.sh
src/: alias_sample.h  args.cpp  args.h  dictionary.cpp  dictionary.h  loss.cpp  loss.h  main.cpp  math_helper.h  matrix.cpp  matrix.h  model.cpp  model.h  real.h  test_alias.cpp  utils.cpp  utils.h  vector.cpp  vector.h  word2vec.cpp  word2vec.h
test/: test.txt  testRead.cpp  test_alias.cpp
